cleanup: remove dead flash CSS, fix typewriter O(n) queue.shift()

--- a/css/style.css
+++ b/css/style.css
@@ -695,30 +695,4 @@ html, body {
     display: block;
 }
 
-.flash-overlay {
-    position: absolute;
-    top: 0; left: 0; right: 0; bottom: 0;
-    background: #fff;
-    opacity: 0;
-    pointer-events: none;
-    z-index: 9999;
-    transition: opacity 40ms ease-out;
-}
-.flash-overlay.active {
-    opacity: 0.85;
-}
 
-.smallflash-overlay {
-    position: absolute;
-    top: 0; left: 0; width: 100%; height: 100%;
-    border-style: solid;
-    border-color: rgba(255,255,255,0.85);
-    pointer-events: none;
-    z-index: 9999;
-    box-sizing: border-box;
-    opacity: 0;
-    transition: opacity 40ms ease-out;
-}
-.smallflash-overlay.active {
-    opacity: 1;
-}
